--- a/CPClient/src/main/resources/fxml/salesmanUI/VIP.fxml
+++ b/CPClient/src/main/resources/fxml/salesmanUI/VIP.fxml
@@ -14,7 +14,7 @@
       <fx:include source="Sale.fxml" />
       <ScrollPane fx:id="scrollPane" layoutX="430.0" layoutY="310.0" prefHeight="435.0" prefWidth="707.0" style="-fx-background-color: #FFB5B5;">
          <content>
-            <VBox fx:id="vipVBox" prefHeight="435.0" prefWidth="707.0">
+            <VBox fx:id="vipVBox" minHeight="435.0" minWidth="707.0">
                <children>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="480.0" prefWidth="703.0" style="-fx-background-color: #FFB5B5;">
                      <children>
@@ -49,19 +49,19 @@
                               <Label prefHeight="45.0" prefWidth="145.0" text="默认业务员" textAlignment="CENTER" textFill="#938c8c" GridPane.rowIndex="8" />
                               <Label prefHeight="45.0" prefWidth="145.0" text="分类" textFill="#938c8c" GridPane.rowIndex="2" />
                               <Label prefHeight="45.0" prefWidth="145.0" text="地址" textAlignment="CENTER" textFill="#938c8c" GridPane.columnIndex="3" GridPane.rowIndex="3" />
-                              <TextField opacity="0.65" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                              <TextField opacity="0.65" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                              <TextField opacity="0.65" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                              <TextField opacity="0.65" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                              <TextField opacity="0.61" GridPane.columnIndex="4" GridPane.rowIndex="7" />
+                              <TextField fx:id="vipName" opacity="0.65" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <TextField fx:id="vipCategory" opacity="0.65" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <TextField fx:id="vipPhoneNumber" opacity="0.65" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              <TextField fx:id="vipEmail" opacity="0.65" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                              <TextField fx:id="collection" opacity="0.61" GridPane.columnIndex="4" GridPane.rowIndex="7" />
                               <Label prefHeight="45.0" prefWidth="145.0" text="编号" textFill="#938c8c" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-                              <TextField opacity="0.65" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+                              <TextField fx:id="vipID" opacity="0.65" GridPane.columnIndex="4" GridPane.rowIndex="1" />
                               <Label prefHeight="45.0" prefWidth="145.0" text="电子邮箱" textAlignment="CENTER" textFill="#938c8c" GridPane.rowIndex="4" />
-                              <TextField opacity="0.61" GridPane.columnIndex="4" GridPane.rowIndex="3" />
+                              <TextField fx:id="vipAddress" opacity="0.61" GridPane.columnIndex="4" GridPane.rowIndex="3" />
                               <Label prefHeight="45.0" prefWidth="145.0" text="级别" textFill="#938c8c" GridPane.columnIndex="3" GridPane.rowIndex="2" />
                               <Label prefHeight="45.0" prefWidth="145.0" text="邮编" textAlignment="CENTER" textFill="#938c8c" GridPane.columnIndex="3" GridPane.rowIndex="4" />
-                              <TextField opacity="0.65" GridPane.columnIndex="4" GridPane.rowIndex="4" />
-                              <TextField opacity="0.61" GridPane.columnIndex="4" GridPane.rowIndex="2" />
+                              <TextField fx:id="vipPostCode" opacity="0.65" GridPane.columnIndex="4" GridPane.rowIndex="4" />
+                              <TextField fx:id="vipGrade" opacity="0.61" GridPane.columnIndex="4" GridPane.rowIndex="2" />
                               <Label prefHeight="37.0" prefWidth="12.0" style="-fx-background-color: #4F9D9D;" GridPane.rowIndex="6" />
                               <Label text="     应收应付" GridPane.rowIndex="6">
                                  <font>
@@ -69,11 +69,11 @@
                                  </font>
                               </Label>
                               <Label prefHeight="45.0" prefWidth="145.0" text="应收额度" textAlignment="CENTER" textFill="#938c8c" GridPane.rowIndex="7" />
-                              <TextField opacity="0.65" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                              <TextField fx:id="collectionLimit" opacity="0.65" GridPane.columnIndex="1" GridPane.rowIndex="7" />
                               <Label prefHeight="45.0" prefWidth="145.0" text="应收" textAlignment="CENTER" textFill="#938c8c" GridPane.columnIndex="3" GridPane.rowIndex="7" />
-                              <TextField opacity="0.65" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+                              <TextField fx:id="clerk" opacity="0.65" GridPane.columnIndex="1" GridPane.rowIndex="8" />
                               <Label prefHeight="45.0" prefWidth="145.0" text="应付" textAlignment="CENTER" textFill="#938c8c" GridPane.columnIndex="3" GridPane.rowIndex="8" />
-                              <TextField opacity="0.61" GridPane.columnIndex="4" GridPane.rowIndex="8" />
+                              <TextField fx:id="payment" opacity="0.61" GridPane.columnIndex="4" GridPane.rowIndex="8" />
                               <ImageView fx:id="editBtn" fitHeight="25.0" fitWidth="25.0" onMouseClicked="#setEditBtn" GridPane.columnIndex="4">
                                  <image>
                                     <Image url="@../../img/edit.png" />
@@ -110,11 +110,11 @@
 
        <Pane layoutX="216.0" layoutY="310.0" prefHeight="435.0" prefWidth="196.0" style="-fx-background-color: #FFB5B5;">
            <children>
-               <VBox fx:id="vBox" layoutX="7.0" layoutY="54.0" prefHeight="369.0" prefWidth="182.0" style="-fx-border-color: #ff7575; -fx-background-radius: 23; -fx-border-radius: 15;" />
+               <VBox fx:id="vBox" layoutX="7.0" layoutY="54.0" minHeight="369.0" minWidth="182.0" style="-fx-border-color: #ff7575; -fx-background-radius: 23; -fx-border-radius: 15;" />
                <Pane layoutX="8.0" layoutY="6.0" prefHeight="42.0" prefWidth="180.0" style="-fx-border-color: #ff7575; -fx-border-radius: 12;">
                    <children>
-                       <Label fx:id="presentLocation" layoutX="49.0" layoutY="13.0" prefHeight="17.0" prefWidth="113.0" />
-                       <Label fx:id="presentLocation" layoutX="11.0" layoutY="10.0" prefHeight="23.0" prefWidth="159.0" text="提示" textFill="#9f353a" />
+                       <Label fx:id="presentLocation" layoutX="40.0" layoutY="10.0" prefHeight="20.0" prefWidth="132.0" />
+                       <Label layoutX="11.0" layoutY="10.0" prefHeight="23.0" prefWidth="31.0" text="提示" textFill="#9f353a" />
                    </children>
                </Pane>
            </children></Pane>
