--- a/CPClient/src/main/resources/fxml/salesmanUI/VIPInfoEdit.fxml
+++ b/CPClient/src/main/resources/fxml/salesmanUI/VIPInfoEdit.fxml
@@ -1,71 +1,80 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.*?>
-<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.stockmanUI.VIPInfoEditController">
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.Font?>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="435.0" prefWidth="707.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.salesmanUI.VIPInfoEditController">
     <children>
-        <Pane fx:id="goodsPane" maxWidth="713.0" prefHeight="435.0" prefWidth="663.0" style="-fx-background-color: #FFB5B5;">
-            <children>
-                <Button fx:id="saveGoodsInfoBtn" layoutX="557.0" layoutY="364.0" mnemonicParsing="false" onAction="#setSaveVIPInfoBtn" prefHeight="27.0" prefWidth="65.0" style="-fx-background-radius: 23; -fx-background-color: #ff7575; -fx-border-radius: 23;" text="保存" textFill="WHITE" />
-                <Label layoutX="233.0" layoutY="41.0" prefHeight="37.0" prefWidth="12.0" style="-fx-background-color: #4F9D9D;" />
-                <TextField fx:id="goodsName" editable="false" layoutX="251.0" layoutY="48.0" prefHeight="37.0" prefWidth="75.0" style="-fx-background-color: transparent; -fx-background-radius: 20; -fx-border-radius: 20;" text="商品名">
-                    <font>
-                        <Font size="18.0" />
-                    </font>
-                </TextField>
-                <TextField fx:id="goodsType" editable="false" layoutX="364.0" layoutY="62.0" prefHeight="17.0" prefWidth="89.0" style="-fx-background-color: transparent;" text="商品型号">
-                    <font>
-                        <Font size="16.0" />
-                    </font>
-                </TextField>
-                <Label layoutX="245.0" layoutY="119.0" text="商品编号" textFill="#000000a1" />
-                <TextField fx:id="goodsID" editable="false" layoutX="311.0" layoutY="114.0" prefHeight="17.0" prefWidth="213.0" style="-fx-background-color: transparent;" text="XSD-yyyyMMdd-xxxxx" />
-                <Label layoutX="245.0" layoutY="161.0" text="库存数量" textFill="#000000a1" />
-                <TextField fx:id="goodsStoreNum" editable="false" layoutX="337.0" layoutY="154.0" prefHeight="32.0" prefWidth="39.0" style="-fx-background-color: transparent; -fx-background-radius: 20; -fx-border-radius: 20;" text="5">
-                    <font>
-                        <Font size="16.0" />
-                    </font>
-                </TextField>
-                <Label layoutX="258.0" layoutY="238.0" text="进价" textFill="#000000a1" />
-                <TextField fx:id="goodsBuyPrice" editable="false" layoutX="331.0" layoutY="224.0" prefHeight="45.0" prefWidth="89.0" style="-fx-background-color: transparent; -fx-background-radius: 20; -fx-border-radius: 20;" text="250">
-                    <font>
-                        <Font size="24.0" />
-                    </font>
-                </TextField>
-                <Label layoutX="462.0" layoutY="238.0" text="最近进价" textFill="#000000a1" />
-                <TextField fx:id="recentBuyPrice" editable="false" layoutX="556.0" layoutY="224.0" prefHeight="17.0" prefWidth="89.0" style="-fx-background-color: transparent; -fx-background-radius: 20; -fx-border-radius: 20;" text="250">
-                    <font>
-                        <Font size="24.0" />
-                    </font>
-                </TextField>
-                <Label layoutX="251.0" layoutY="300.0" prefHeight="36.0" prefWidth="39.0" text="销售价" textFill="#000000a1" />
-                <TextField fx:id="goodsSellPrice" editable="false" layoutX="331.0" layoutY="297.0" prefHeight="17.0" prefWidth="89.0" style="-fx-background-color: transparent; -fx-border-radius: 20; -fx-background-radius: 20;" text="2350">
-                    <font>
-                        <Font size="24.0" />
-                    </font>
-                </TextField>
-                <Label layoutX="463.0" layoutY="311.0" text="最近销售价" textFill="#000000a1" />
-                <TextField fx:id="recentSellPrice" editable="false" layoutX="556.0" layoutY="297.0" prefHeight="17.0" prefWidth="89.0" style="-fx-background-color: transparent; -fx-background-radius: 20; -fx-border-radius: 20;" text="2350">
-                    <font>
-                        <Font size="24.0" />
-                    </font>
-                </TextField>
-                <ImageView fitHeight="200.0" fitWidth="200.0">
-                    <image>
-                        <Image url="@../../img/lamp1.JPG" />
-                    </image>
-                </ImageView>
-                <TextField fx:id="goodsCategory" editable="false" layoutX="470.0" layoutY="62.0" prefHeight="17.0" prefWidth="89.0" style="-fx-background-color: transparent;" text="商品分类">
-                    <font>
-                        <Font size="16.0" />
-                    </font>
-                </TextField>
-            </children>
-        </Pane>
+        <ScrollPane fx:id="scrollPane" prefHeight="435.0" prefWidth="707.0" style="-fx-background-color: #FFB5B5;">
+            <content>
+                <VBox fx:id="vipVBox" prefHeight="435.0" prefWidth="707.0">
+                    <children>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="480.0" prefWidth="703.0" style="-fx-background-color: #FFB5B5;">
+                            <children>
+                                <GridPane layoutX="36.0" layoutY="42.0" prefHeight="352.0" prefWidth="612.0">
+                                    <columnConstraints>
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                    </columnConstraints>
+                                    <rowConstraints>
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    </rowConstraints>
+                                    <children>
+                                        <Label prefHeight="44.0" prefWidth="129.0" text="姓名" textFill="#938c8c" GridPane.rowIndex="1" />
+                                        <Label prefHeight="37.0" prefWidth="12.0" style="-fx-background-color: #4F9D9D;" />
+                                        <Label prefHeight="45.0" prefWidth="145.0" text="电话" textAlignment="CENTER" textFill="#938c8c" GridPane.rowIndex="3" />
+                                        <Label text="     客户信息">
+                                            <font>
+                                                <Font size="18.0" />
+                                            </font>
+                                        </Label>
+                                        <Label prefHeight="45.0" prefWidth="145.0" text="默认业务员" textAlignment="CENTER" textFill="#938c8c" GridPane.rowIndex="8" />
+                                        <Label prefHeight="45.0" prefWidth="145.0" text="分类" textFill="#938c8c" GridPane.rowIndex="2" />
+                                        <Label prefHeight="45.0" prefWidth="145.0" text="地址" textAlignment="CENTER" textFill="#938c8c" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+                                        <TextField opacity="0.65" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                        <TextField opacity="0.65" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                        <TextField opacity="0.65" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                        <TextField opacity="0.65" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                                        <TextField opacity="0.61" GridPane.columnIndex="4" GridPane.rowIndex="7" />
+                                        <Label prefHeight="45.0" prefWidth="145.0" text="编号" textFill="#938c8c" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                                        <TextField opacity="0.65" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+                                        <Label prefHeight="45.0" prefWidth="145.0" text="电子邮箱" textAlignment="CENTER" textFill="#938c8c" GridPane.rowIndex="4" />
+                                        <TextField opacity="0.61" GridPane.columnIndex="4" GridPane.rowIndex="3" />
+                                        <Label prefHeight="45.0" prefWidth="145.0" text="级别" textFill="#938c8c" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+                                        <Label prefHeight="45.0" prefWidth="145.0" text="邮编" textAlignment="CENTER" textFill="#938c8c" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+                                        <TextField opacity="0.65" GridPane.columnIndex="4" GridPane.rowIndex="4" />
+                                        <TextField opacity="0.61" GridPane.columnIndex="4" GridPane.rowIndex="2" />
+                                        <Label prefHeight="37.0" prefWidth="12.0" style="-fx-background-color: #4F9D9D;" GridPane.rowIndex="6" />
+                                        <Label text="     应收应付" GridPane.rowIndex="6">
+                                            <font>
+                                                <Font size="18.0" />
+                                            </font>
+                                        </Label>
+                                        <Label prefHeight="45.0" prefWidth="145.0" text="应收额度" textAlignment="CENTER" textFill="#938c8c" GridPane.rowIndex="7" />
+                                        <TextField opacity="0.65" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                                        <Label prefHeight="45.0" prefWidth="145.0" text="应收" textAlignment="CENTER" textFill="#938c8c" GridPane.columnIndex="3" GridPane.rowIndex="7" />
+                                        <TextField opacity="0.65" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+                                        <Label prefHeight="45.0" prefWidth="145.0" text="应付" textAlignment="CENTER" textFill="#938c8c" GridPane.columnIndex="3" GridPane.rowIndex="8" />
+                                        <TextField opacity="0.61" GridPane.columnIndex="4" GridPane.rowIndex="8" />
+                                    </children>
+                                </GridPane>
+                        <Button fx:id="saveVIPInfoBtn" layoutX="526.0" layoutY="408.0" mnemonicParsing="false" onAction="#setSaveVIPInfoBtn" prefHeight="27.0" prefWidth="56.0" style="-fx-background-color: #ff7575; -fx-background-radius: 23; -fx-border-radius: 23;" text="保存" textFill="#fcfcfc" />
+                            </children>
+                        </AnchorPane>
+                    </children>
+                </VBox>
+            </content>
+        </ScrollPane>
     </children>
-
 </AnchorPane>
