--- a/CPClient/src/main/resources/fxml/listUI/BussinessSituation.fxml
+++ b/CPClient/src/main/resources/fxml/listUI/BussinessSituation.fxml
@@ -133,6 +133,7 @@
                </font>
             </Label>
             <JFXButton fx:id="toExcelBtn" layoutX="402.0" layoutY="320.0" onAction="#toExcel" prefHeight="37.0" prefWidth="134.0" ripplerFill="#11edc7" style="-fx-background-color: PINK;" text="导出数据" />
+            <Label fx:id="rmLabel" layoutX="591.0" layoutY="329.0" prefHeight="30.0" prefWidth="311.0" />
          </children>
       </Pane>
    </children>
